--- a/templates/manager/icons.html
+++ b/templates/manager/icons.html
@@ -1,25 +1,30 @@
-<!DOCTYPE html>
+{% load staticfiles %}
 <html>
 <head>
-	<title>Detail Admin - Icons</title>
+	<title>DMOnline - Icons</title>
     
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	
     <!-- bootstrap -->
-    <link href="css/bootstrap/bootstrap.css" rel="stylesheet" />
-    <link href="css/bootstrap/bootstrap-responsive.css" rel="stylesheet" />
-    <link href="css/bootstrap/bootstrap-overrides.css" type="text/css" rel="stylesheet" />
-
-    <!-- global styles -->
-    <link rel="stylesheet" type="text/css" href="css/layout.css" />
-    <link rel="stylesheet" type="text/css" href="css/elements.css" />
-    <link rel="stylesheet" type="text/css" href="css/icons.css" />
+    <link href="{% static 'css/bootstrap/bootstrap.css' %}" rel="stylesheet" />
+    <link href="{% static 'css/bootstrap/bootstrap-responsive.css' %}" rel="stylesheet" />
+    <link href="{% static 'css/bootstrap/bootstrap-overrides.css' %}" type="text/css" rel="stylesheet" />
 
     <!-- libraries -->
-    <link rel="stylesheet" type="text/css" href="css/lib/font-awesome.css" />
+    <link href="{% static 'css/lib/jquery-ui-1.10.2.custom.css' %}" rel="stylesheet" type="text/css" />
+    <link href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
+{#    <link href="{% static 'css/lib/font-awesome.css'%}" type="text/css" rel="stylesheet" />#}
+{#    <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">#}
+
+    <!-- global styles -->
+    <link rel="stylesheet" type="text/css" href="{% static 'css/layout.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/elements.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/icons.css' %}" />
     
     <!-- this page specific styles -->
-    <link rel="stylesheet" href="css/compiled/web-app-icons.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="{% static 'css/compiled/web-app-icons.css' %}" type="text/css" media="screen" />
+
+
 
     <!-- open sans font -->
     <link href='http://fonts.useso.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css' />
@@ -536,9 +541,9 @@
 
 
 	<!-- scripts -->
-    <script src="js/jquery-latest.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/theme.js"></script>
+    <script src="{% static 'js/jquery-latest.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/theme.js'%}"></script>
 
 </body>
 </html>
