--- a/templates/manager/index.html
+++ b/templates/manager/index.html
@@ -1,26 +1,26 @@
-<!DOCTYPE html>
+{% load staticfiles %}
 <html>
 <head>
-	<title>Detail Admin - Home</title>
+	<title>DMOnline - Home</title>
     
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	
     <!-- bootstrap -->
-    <link href="css/bootstrap/bootstrap.css" rel="stylesheet" />
-    <link href="css/bootstrap/bootstrap-responsive.css" rel="stylesheet" />
-    <link href="css/bootstrap/bootstrap-overrides.css" type="text/css" rel="stylesheet" />
+    <link href="{% static 'css/bootstrap/bootstrap.css' %}" rel="stylesheet" />
+    <link href="{% static 'css/bootstrap/bootstrap-responsive.css' %}" rel="stylesheet" />
+    <link href="{% static 'css/bootstrap/bootstrap-overrides.css' %}" type="text/css" rel="stylesheet" />
 
     <!-- libraries -->
-    <link href="css/lib/jquery-ui-1.10.2.custom.css" rel="stylesheet" type="text/css" />
-    <link href="css/lib/font-awesome.css" type="text/css" rel="stylesheet" />
+    <link href="{% static 'css/lib/jquery-ui-1.10.2.custom.css' %}" rel="stylesheet" type="text/css" />
+    <link href="{% static 'css/font-awesome.min.css'%}" type="text/css" rel="stylesheet" />
 
     <!-- global styles -->
-    <link rel="stylesheet" type="text/css" href="css/layout.css" />
-    <link rel="stylesheet" type="text/css" href="css/elements.css" />
-    <link rel="stylesheet" type="text/css" href="css/icons.css" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/layout.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/elements.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/icons.css' %}" />
 
     <!-- this page specific styles -->
-    <link rel="stylesheet" href="css/compiled/index.css" type="text/css" media="screen" />    
+    <link rel="stylesheet" href="{% static 'css/compiled/index.css'%}" type="text/css" media="screen" />
 
     <!-- open sans font -->
     <link href='http://fonts.useso.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css' />
@@ -43,7 +43,7 @@
                 <span class="icon-bar"></span>
             </button>
             
-            <a class="brand" href="index.html"><img src="img/logo.png" /></a>
+            <a class="brand" href="index.html"><img src="../../static/img/logo.png" /></a>
 
             <ul class="nav pull-right">                
                 <li class="hidden-phone">
@@ -104,7 +104,7 @@
                             <a href="#" class="close-icon"><i class="icon-remove-sign"></i></a>
                             <div class="messages">
                                 <a href="#" class="item">
-                                    <img src="img/contact-img.png" class="display" />
+                                    <img src="../../static/img/contact-img.png" class="display" />
                                     <div class="name">Alejandra Galván</div>
                                     <div class="msg">
                                         There are many variations of available, but the majority have suffered alterations.
@@ -112,7 +112,7 @@
                                     <span class="time"><i class="icon-time"></i> 13 min.</span>
                                 </a>
                                 <a href="#" class="item">
-                                    <img src="img/contact-img2.png" class="display" />
+                                    <img src="../../static/img/contact-img2.png" class="display" />
                                     <div class="name">Alejandra Galván</div>
                                     <div class="msg">
                                         There are many variations of available, have suffered alterations.
@@ -120,8 +120,8 @@
                                     <span class="time"><i class="icon-time"></i> 26 min.</span>
                                 </a>
                                 <a href="#" class="item last">
-                                    <img src="img/contact-img.png" class="display" />
-                                    <div class="name">Alejandra Galván</div>
+                                    <img src="../../static/img/contact-img.png" class="display" />
+                                    <div class="name">Alejandra</div>
                                     <div class="msg">
                                         There are many variations of available, but the majority have suffered alterations.
                                     </div>
@@ -436,7 +436,7 @@
                                     <td>
                                         <input type="checkbox" />
                                         <div class="img">
-                                            <img src="img/table-img.png" />
+                                            <img src="../../static/img/table-img.png" />
                                         </div>
                                         <a href="#">There are many variations </a>
                                     </td>
@@ -457,7 +457,7 @@
                                     <td>
                                         <input type="checkbox" />
                                         <div class="img">
-                                            <img src="img/table-img.png" />
+                                            <img src="../../static/img/table-img.png" />
                                         </div>
                                         <a href="#">Internet tend</a>
                                     </td>
@@ -477,7 +477,7 @@
                                     <td>
                                         <input type="checkbox" />
                                         <div class="img">
-                                            <img src="img/table-img.png" />
+                                            <img src="../../static/img/table-img.png" />
                                         </div>
                                         <a href="#">Many desktop publishing </a>
                                     </td>
@@ -497,7 +497,7 @@
                                     <td>
                                         <input type="checkbox" />
                                         <div class="img">
-                                            <img src="img/table-img.png" />
+                                            <img src="../../static/img/table-img.png" />
                                         </div>
                                         <a href="#">Generate Lorem </a>
                                     </td>
@@ -518,7 +518,7 @@
                                     <td>
                                         <input type="checkbox" />
                                         <div class="img">
-                                            <img src="img/table-img.png" />
+                                            <img src="../../static/img/table-img.png" />
                                         </div>
                                         <a href="#">Internet tend</a>
                                     </td>
@@ -546,25 +546,26 @@
                         <li><a href="#">&#8250;</a></li>
                       </ul>
                     </div>
-                    <div>More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></div>
+
                 </div>
                 <!-- end table sample -->
             </div>
         </div>
     </div>
+    <div class="text-center"><p>copy right @alanmaxwell</p></div>
 
 
 	<!-- scripts -->
-    <script src="js/jquery-latest.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery-ui-1.10.2.custom.min.js"></script>
+    <script src="{% static 'js/jquery-latest.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/jquery-ui-1.10.2.custom.min.js' %}"></script>
     <!-- knob -->
-    <script src="js/jquery.knob.js"></script>
+    <script src="{% static 'js/jquery.knob.js'%}"></script>
     <!-- flot charts -->
-    <script src="js/jquery.flot.js"></script>
-    <script src="js/jquery.flot.stack.js"></script>
-    <script src="js/jquery.flot.resize.js"></script>
-    <script src="js/theme.js"></script>
+    <script src="{% static 'js/jquery.flot.js' %}"></script>
+    <script src="{% static 'js/jquery.flot.stack.js' %}"></script>
+    <script src="{% static 'js/jquery.flot.resize.js' %}"></script>
+    <script src="{% static 'js/theme.js' %}"></script>
 
     <script type="text/javascript">
         $(function () {
