--- a/templates/manager/sidebar.html
+++ b/templates/manager/sidebar.html
@@ -12,6 +12,12 @@
                     <span>Charts</span>
                 </a>
             </li>
+            <li>
+                <a href="{% url 'manager:map' %}">
+                    <i class="fa fa-map-o"></i>
+                    <span>Map</span>
+                </a>
+            </li>
 {#            <li>#}
 {#                <a class="dropdown-toggle" href="#">#}
 {#                    <i class="icon-group"></i>#}
