--- a/templates/manager/signin.html
+++ b/templates/manager/signin.html
@@ -61,8 +61,8 @@
 
 
     <div class="row-fluid login-wrapper">
-        <a href="index.html">
-            <img class="logo"/>
+        <a href="#">
+            <img class="logo" src="{% static 'img/new-logo-white.png' %}" />
         </a>
 
         <div class="span4 box">
