--- a/templates/manager/index.html
+++ b/templates/manager/index.html
@@ -43,7 +43,7 @@
                 <span class="icon-bar"></span>
             </button>
             
-            <a class="brand" href="index.html"><img src="../../static/img/logo.png" /></a>
+            <a class="brand" href="index.html"><img src="../../static/img/new_logo.png" /></a>
 
             <ul class="nav pull-right">                
                 <li class="hidden-phone">
