--- a/templates/manager/navbar.html
+++ b/templates/manager/navbar.html
@@ -6,7 +6,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="brand" href="{% url 'manager:manager_home' %}"><img src="{% static 'img/logo.png' %}" /></a>
+            <a class="brand" href="{% url 'manager:manager_home' %}"><img src="{% static 'img/new_logo.png' %}" /></a>
 
             <ul class="nav pull-right">
 {#                <li class="hidden-phone">#}
