--- a/templates/manager/signup.html
+++ b/templates/manager/signup.html
@@ -31,8 +31,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /></head>
 <body>
     <div class="header">
-        <a href="index.html">
-            <img class="logo" />
+        <a href="#">
+            <img class="logo" src="{% static 'img/new-logo-white.png' %}" />
         </a>
     </div>
     <div class="row-fluid login-wrapper">
