--- a/templates/manager/icons.html
+++ b/templates/manager/icons.html
@@ -213,7 +213,7 @@
                 </a>
             </li>
             <li>
-                <a href="tables.html">
+                <a href="tables_.html">
                     <i class="icon-th-large"></i>
                     <span>Tables</span>
                 </a>
