--- a/templates/manager/sidebar.html
+++ b/templates/manager/sidebar.html
@@ -32,7 +32,7 @@
 {#            </li>#}
 
             <li>
-                <a href="#">
+                <a href="{% url 'manager:tables' %}">
                     <i class="fa fa-table"></i>
                     <span>Tables</span>
                 </a>
