--- a/templates/manager/base.html
+++ b/templates/manager/base.html
@@ -22,9 +22,9 @@
 
     <!-- this page specific styles -->
     <link rel="stylesheet" href="{% static 'css/compiled/web-app-icons.css' %}" type="text/css" media="screen" />
-
+    <link rel="stylesheet" href="{% static 'css/compiled/tables.css' %}">
     <!-- open sans font -->
-    <link href='http://fonts.useso.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css' />
+{#    <link href='http://fonts.useso.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css' />#}
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </head>
@@ -44,7 +44,38 @@
 {% endblock %}
 
 {% block script %}
+    <script src="{% static 'js/jquery-latest.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/theme.js'%}"></script>
+    <script type="text/javascript">
+    window.onload = function(){
+    var $ = function(id){
+        return document.getElementById(id);
+    }
 
+    var addEvent = function(obj, event, fn){
+        if(obj.addEventListener){
+            obj.addEventListener(event,fn,false);
+        }else if(obj.attachEvent){
+            obj.attachEvent('on'+event,fn);
+        }
+
+    }
+
+    var domSider = $('sidebar-nav');
+    addEvent(window,'scroll', function(){
+        var sideHeight = domSider.offsetHeight;
+        var screenHeight = document.documentElement.clientHeight;
+        var scrollHeight = document.body.scrollTop;
+        if(scrollHeight+screenHeight > sideHeight){
+            domSider.style.cssText='position:fixed;' +
+                'right:0px;top:'+(-(sideHeight-screenHeight))+'px';
+        }else{
+            domSider.style.position='static';
+        }
+    });
+}
+    </script>
 {% endblock %}
 
 </body>
