--- a/templates/manager/sidebar.html
+++ b/templates/manager/sidebar.html
@@ -7,7 +7,7 @@
                 </a>
             </li>
             <li>
-                <a href="chart-showcase.html">
+                <a href="#">
                     <i class="fa fa-signal"></i>
                     <span>Charts</span>
                 </a>
