--- a/templates/manager/tables.html
+++ b/templates/manager/tables.html
@@ -1,10 +1,29 @@
 {% extends 'manager/base.html' %}
-
+{% load staticfiles %}
 {% block title %}
     DMOnline - tables
 {% endblock %}
 
 {% block content %}
 
+    <div class="container-fluid" style="margin-left: 185px">
+        <div id="pad-wrapper">
+            <div class="table-wrapper section">
+                <div class="row-fluid head"><div class="span12"><h3>Store Address Info</h3></div> </div>
+                <div class="row-fluid">
+                    <div>
+                        {{ datatable|safe }}
+                    </div>
+                </div>
 
+                <div class="row-fluid head"><div class="span12"><h3>Store POI</h3></div> </div>
+                <div class="row-fluid">
+                    <div>
+                        {{ poidatatable|safe }}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
+
