--- a/templates/manager/tables_.html
+++ b/templates/manager/tables_.html
@@ -656,9 +656,9 @@
     <!-- end main container -->
 
 	<!-- scripts -->
-    <script src="js/jquery-latest.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/theme.js"></script>
+    <script src="{% static 'js/jquery-latest.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/theme.js'%}"></script>
 
 </body>
 </html>
