--- a/templates/manager/sidebar.html
+++ b/templates/manager/sidebar.html
@@ -1,4 +1,4 @@
-<div id="sidebar-nav">
+<div id="sidebar-nav" style="position: fixed;left: 0px;top: 0px">
         <ul id="dashboard-menu">
             <li>
                 <a href="{% url 'manager:manager_home' %}">
