--- a/templates/manager/map_test.html
+++ b/templates/manager/map_test.html
@@ -6,7 +6,7 @@
 	<title></title>
 
     <style type="text/css">
-        html, body {
+        html,body {
             width: 100%;
             height: 100%;
             margin: 0;
@@ -15,8 +15,9 @@
         }
 
         #map {
-            width: 100%;
-            height: 100%;
+            width: 85%;
+            height: 85%;
+            margin-left: 185px;
         }
     </style>
 </head>
